--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
       href="https://fonts.googleapis.com/css2?family=Alice&family=Inter:ital,opsz@0,14..32;1,14..32&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="./traveling-profile-project/styles/index.css"
-    />
+    <link rel="stylesheet" href="./styles/index.css" />
     <title>Travelgram | Traveler profile</title>
   </head>
   <body>
     <div class="bg-surface-color">
       <nav class="container">
         <a href="#" id="logo">
-          <img src="./traveling-profile-project/assets/Logo.svg" alt="Logo" />
+          <img src="./assets/Logo.svg" alt="Logo" />
         </a>
         <ul id="primary-menu">
           <li>
             <a href="#">
               <img
-                src="./traveling-profile-project/assets/icons/MagnifyingGlass.svg"
+                src="./assets/icons/MagnifyingGlass.svg"
                 alt="magnifying glass icon"
                 id="searchIcon"
               />
@@ -36,7 +33,7 @@
           <li>
             <a href="#">
               <img
-                src="./traveling-profile-project/assets/images/Profile pic.png"
+                src="./assets/images/Profile pic.png"
                 alt="Renan Duarte's profile picture"
               />
             </a>
@@ -47,7 +44,7 @@
         <div class="container">
           <div id="profile">
             <img
-              src="./traveling-profile-project/assets/images/Profile pic.png"
+              src="./assets/images/Profile pic.png"
               alt="Renan Duarte's profile picture"
             />
             <h1>Renan Duarte</h1>
@@ -59,27 +56,21 @@
           </div>
           <ul id="info">
             <li>
-              <img
-                src="./traveling-profile-project/assets/icons/MapPin.svg"
-                alt="map pin icon"
-              /><span>São Paulo, Brazil</span>
+              <img src="./assets/icons/MapPin.svg" alt="map pin icon" />
+              <span>São Paulo, Brazil</span>
             </li>
             <li>
-              <img
-                src="./traveling-profile-project/assets/icons/AirplaneTilt.svg"
-                alt="airplane icon"
-              /><span>37 países</span>
+              <img src="./assets/icons/AirplaneTilt.svg" alt="airplane icon" />
+              <span>37 países</span>
             </li>
             <li>
-              <img
-                src="./traveling-profile-project/assets/icons/Image.svg"
-                alt="picture icon"
-              /><span>240 fotos</span>
+              <img src="./assets/icons/Image.svg" alt="picture icon" />
+              <span>240 fotos</span>
             </li>
           </ul>
         </div>
       </header>
     </div>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
