--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
               src="./assets/images/Profile pic.png"
               alt="Renan Duarte's profile picture"
             />
-            <h1>Renan Duarte</h1>
-            <p>
-              Lover of travel, culture, and gastronomy. 🌍✈️ Here I share the
-              stories captured in every click, exploring fascinating corners of
-              our planet from the bustling city of São Paulo. 🏙️📸
-            </p>
+            <div>
+              <h1>Renan Duarte</h1>
+              <p>
+                Lover of travel, culture, and gastronomy. 🌍✈️
+                <br />
+                Here I share the stories captured in every click, exploring
+                fascinating corners of our planet from the bustling city of São
+                Paulo. 🏙️📸
+              </p>
+            </div>
           </div>
           <ul id="info">
             <li>
